# cpp_benchmark

benchmark/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  compile_flags.txt
benchmark/BB/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  benchmark  build.ninja  cmake_install.cmake
benchmark/cmake/: dev-mode.cmake  install-rules.cmake  install-script.cmake
benchmark/source/: lib.cpp  main.cpp
benchmark/test/: CMakeLists.txt
benchmark/test/source/: benchmark_test.cpp
branchless/: .clang-format  BUILDING.md  CMakeLists.txt
branchless/cmake/: create_dir.cmake  install-rules.cmake  variables.cmake
branchless/source/: branch_not_predicted.cpp  branch_predicted.cpp  branchless.h  branchless_not_predicted.cpp  branchless_predicted.cpp  common.h  main.cpp
branchless/test/: CMakeLists.txt
